name:                asteroids
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cmc-haskell-2016/asteroids#readme
license:             BSD3
license-file:        LICENSE
author:              asteroids Team
maintainer:          asteroids@example.com
copyright:           2016 asteroids Team
category:            Experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options:         -Wall -fno-warn-type-defaults
  hs-source-dirs:      src
  exposed-modules:     Interface,
                       Types,
                       Rendering,
                       Game,
                       GraphObject,
                       Ship,
                       Asteroid,
                       Bullet,
                       Universe,
                       Collisions,
                       ServerAPI,
                       API,
                       ServerSide
  build-depends:       base >= 4.7 && < 5,
                       gloss == 1.9.4.1,
                       gloss-rendering,
                       random,
                       wai,
                       wai-websockets,
                       websockets,
                       http-types,
                       mtl,
                       text,
                       transformers,
                       http-client,
                       servant-server,
                       servant-client,
                       servant-docs,
                       servant,
                       aeson,
                       network,
                       stm,
                       bytestring
  default-language:    Haskell2010

executable server
  ghc-options:         -Wall
  hs-source-dirs:      server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       aeson,
                       asteroids,
                       servant-server,
                       servant-client,
                       servant-docs,
                       servant,
                       wai,
                       warp
  default-language:    Haskell2010

executable client
  ghc-options:         -Wall
  hs-source-dirs:      client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       aeson,
                       asteroids,
                       gloss == 1.9.4.1,
                       servant-server,
                       servant-client,
                       servant,
                       transformers,
                       http-client,
                       wai,
                       stm,
                       http-types,
                       bytestring,
                       http-media,
                       websockets,
                       mtl,
                       text
  default-language:    Haskell2010

test-suite asteroids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       asteroids
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2016/asteroids
